--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h4>Hello World</h4>
+    <div><img src="kitten.png" alt="Hello World from Space"
+        style="width:100%;max-width:960px"></div>
+    <h5>I'm learning Git Tutorial</h5>
+
 </body>
 </html>
