--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div><img src="kitten.png" alt="Hello World from Space"
         style="width:100%;max-width:960px"></div>
     <h5>I'm learning Git Tutorial</h5>
-    <div><img src="map.jpg" alt="Hello Git" style="width:100%;max-width:640px">
+    <div><img src="map.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+    <h5>update local repo to GitHub</h5>
+    <div><img src="kitten.png" alt="Hello World from Space"
+        style="width:100%;max-width:500px"></div>
 </body>
 </html>
