--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <h5>update local repo to GitHub</h5>
     <div class="img"><img src="kitten.png" alt="Hello World from Space"
         style="width:100%;max-width:500px"></div>
+    <h5>examplr of direct pull changes from remote to local repo</h5>
 </body>
 </html>
