--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h5>update local repo to GitHub</h5>
     <div class="img"><img src="kitten.png" alt="Hello World from Space"
         style="width:100%;max-width:500px"></div>
-    <h5>examplr of direct pull changes from remote to local repo</h5>
+    <h5>example of direct pull changes from remote to local repo</h5>\
+    <h5>exaple of how to push local repo code to GitHub repo</h5>
 </body>
 </html>
