Update index.html with h4 tag
add new line with h4 tag

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         style="width:100%;max-width:500px"></div>
     <h5>example of direct pull changes from remote to local repo</h5>
     <h5>exaple of how to push local repo code to GitHub repo</h5>
+    <h4>create new branch home skeletone</h4>
 </body>
 </html>
